--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     <h4>GITHUB Test</h4>
     <p>Hi World, theiorwlkfjklgj</p>
     <h5>neuer Zweig - version 3</h5>
+    <h5>I'm Version 0.1.2.</h5>
 </body>
 </html>
